added more functionality / currently debugging

--- a/To Do App/index.html
+++ b/To Do App/index.html
@@ -21,7 +21,7 @@
             <input type="text" placeholder="Enter The Task Here"/>
             <button id="push">Add</button>
         </div>
-        <div class="tasks"></div>
+        <div id="tasks"></div>
     </div>
     <script src="./script.js"></script>
 </body>
